--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.5.1",
+    "cleave.js": "^1.6.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
